Add Google Oauth2 authentication

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -49,5 +49,6 @@ airflow::catchup: false
 airflow::job_heartbeat_sec: 5
 airflow::scheduler_heartbeat_sec: 5
 airflow::ldap_settings: {}
+airflow::google_settings: {}
 airflow::statsd_settings: {}
 airflow::mesos_settings: {}
