Move to using virtualenv
Hiera kludge (puppet 4.8+) based off of:
https://github.com/simp/pupmod-simp-simplib/blob/master/spec/spec_helper.rb

--- a/spec/fixtures/hieradata/test.yaml
+++ b/spec/fixtures/hieradata/test.yaml
@@ -13,15 +13,15 @@ airflow::log_folder: '/var/log/airflow'
 airflow::run_folder: '/var/run/airflow'
 airflow::systemd_service_folder: '/lib/systemd/system'
 airflow::home_folder: '/opt/airflow'
-airflow::dags_folder: "%{lookup('airflow::home_folder')}/dags"
+airflow::dags_folder: "%{hiera('airflow::home_folder')}/dags"
 airflow::s3_log_folder: 'None'
 airflow::executor: 'CeleryExecutor'
-airflow::sql_alchemy_conn: "sqlite:////%{lookup('airflow::home_folder')}/airflow.db"
+airflow::sql_alchemy_conn: "sqlite:////%{hiera('airflow::home_folder')}/airflow.db"
 airflow::parallelism: 32
 airflow::dag_concurrency: 16
 airflow::max_active_runs_per_dag: 16
 airflow::load_examples: false
-airflow::plugins_folder: "%{lookup('airflow::home_folder')}/plugins"
+airflow::plugins_folder: "%{hiera('airflow::home_folder')}/plugins"
 airflow::fernet_key: 'cryptography_not_found_storing_passwords_in_plain_text'
 airflow::donot_pickle: false
 airflow::base_url: 'http://localhost'
