--- a/data/common.yaml
+++ b/data/common.yaml
@@ -31,6 +31,7 @@ airflow::gunicorn_workers: 4
 airflow::worker_class: 'sync'
 airflow::expose_config: true
 airflow::authenticate: false
+airflow::auth_backend: null
 airflow::filter_by_owner: false
 airflow::smtp_host: 'localhost'
 airflow::smtp_starttls: true
