--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,7 +1,7 @@
 ---
 airflow::service_ensure: 'running'
 airflow::service_enable: true
-airflow::version: '1.9.0'
+airflow::version: '1.10.5'
 airflow::package_name: 'apache-airflow'
 airflow::user: 'airflow'
 airflow::group: 'airflow'
@@ -40,10 +40,10 @@ airflow::smtp_port: 25
 airflow::smtp_password: 'airflow'
 airflow::smtp_mail_from: 'airflow@airflow.com'
 airflow::celery_app_name: 'airflow.executors.celery_executor'
-airflow::celeryd_concurrency: 16
+airflow::worker_concurrency: 16
 airflow::worker_log_server_port: 8793
 airflow::broker_url: 'sqla+mysql://airflow:airflow@localhost:3306/airflow'
-airflow::celery_result_backend: 'db+mysql://airflow:airflow@localhost:3306/airflow'
+airflow::result_backend: 'db+mysql://airflow:airflow@localhost:3306/airflow'
 airflow::flower_port: 5555
 airflow::default_queue: 'default'
 airflow::catchup: false
