--- a/data/common.yaml
+++ b/data/common.yaml
@@ -46,7 +46,7 @@ airflow::worker_concurrency: 16
 airflow::worker_log_server_port: 8793
 airflow::broker_url: 'sqla+mysql://airflow:airflow@localhost:3306/airflow'
 airflow::result_backend: 'db+mysql://airflow:airflow@localhost:3306/airflow'
-airflow::flower_prefix: ''
+airflow::flower_url_prefix: ''
 airflow::flower_port: 5555
 airflow::default_queue: 'default'
 airflow::catchup: false
