--- a/data/common.yaml
+++ b/data/common.yaml
@@ -50,6 +50,7 @@ airflow::flower_url_prefix: ''
 airflow::flower_port: 5555
 airflow::default_queue: 'default'
 airflow::catchup: false
+airflow::dag_dir_list_interval: 300
 airflow::job_heartbeat_sec: 5
 airflow::scheduler_heartbeat_sec: 5
 airflow::auth_details: {}
