--- a/data/common.yaml
+++ b/data/common.yaml
@@ -45,6 +45,7 @@ airflow::smtp_password: 'airflow'
 airflow::smtp_mail_from: 'airflow@airflow.com'
 airflow::celery_app_name: 'airflow.executors.celery_executor'
 airflow::worker_concurrency: 16
+airflow::worker_autoscale: '16,12'
 airflow::worker_log_server_port: 8793
 airflow::broker_url: 'sqla+mysql://airflow:airflow@localhost:3306/airflow'
 airflow::result_backend: 'db+mysql://airflow:airflow@localhost:3306/airflow'
