--- a/data/common.yaml
+++ b/data/common.yaml
@@ -15,6 +15,7 @@ airflow::run_folder: '/var/run/airflow'
 airflow::home_folder: '/opt/airflow'
 airflow::dags_folder: "%{lookup('airflow::home_folder')}/dags"
 airflow::s3_log_folder: 'None'
+airflow::logging_level: 'INFO'
 airflow::executor: 'CeleryExecutor'
 airflow::sql_alchemy_conn: "sqlite:////%{lookup('airflow::home_folder')}/airflow.db"
 airflow::sql_alchemy_pool_size: 5
