--- a/data/common.yaml
+++ b/data/common.yaml
@@ -25,6 +25,7 @@ airflow::sql_alchemy_pool_recycle: 1800
 airflow::parallelism: 32
 airflow::dag_concurrency: 16
 airflow::max_active_runs_per_dag: 16
+airflow::max_active_tasks_per_dag: 16
 airflow::load_examples: false
 airflow::plugins_folder: "%{lookup('airflow::home_folder')}/plugins"
 airflow::fernet_key: 'cryptography_not_found_storing_passwords_in_plain_text'
